--- a/src/main/templates/main/requirements_enterprise/list.html
+++ b/src/main/templates/main/requirements_enterprise/list.html
@@ -1,10 +1,10 @@
 <div class="col-md-12"><h4>Requerimientos</h4></div>
     <div id="pad-wrapper" class="users-list">
      <div class="col-md-6 col-sm-12 col-xs-12 pull-right">
-        <a href="{% url 'main:global_requirement_new' %}" class="btn-flat success pull-right">
-            <span>&#43;</span>
-            Nuevo Requerimiento
-        </a>
+{#        <a href="{% url 'main:global_requirement_new' %}" class="btn-flat success pull-right">#}
+{#            <span>&#43;</span>#}
+{#            Nuevo Requerimiento#}
+{#        </a>#}
     </div>
     <table class="table table-hover">
         <thead>
