--- a/src/main/templates/main/hooks/form.html
+++ b/src/main/templates/main/hooks/form.html
@@ -2,31 +2,12 @@
 <div id="pad-wrapper" class="new-user">
     <div class="row header">
         <div class="col-md-12">
-            <h3>{{title|capfirst}}</h3>
+            <h3>{{ title|capfirst }}</h3>
         </div>
     </div>
     <div class="row form-wrapper">
         <div class="col-md-9 with-sidebar">
-
-            <form action="." method="post" class="form-horizontal" enctype="multipart/form-data">
-                {% csrf_token %}
-                {% for f in form %}
-                <div class="form-group {% if f.errors %}has-error{% endif %}">
-                    <label for="id_{{f.name}}" class="col-sm-2 control-label">{{ f.label|capfirst }}</label>
-                    <div class="col-sm-10">
-                        {{ f }}
-                        {% for error in f.errors %}
-                        <p class="help-block">{{ error }}</p>
-                        {% endfor %}
-                    </div>
-                </div>
-                {% endfor %}
-                <div class="pull-right">
-                    <input type="submit" class="btn btn-primary" class="pull-right" value="{{save_text|default:'Save'}}"
-                           name="_save">
-                </div>
-            </form>
-
+            {% include 'main/hooks/_form.html' with form=form1 %}
         </div>
     </div>
 </div>
