--- a/src/main/templates/main/layout.html
+++ b/src/main/templates/main/layout.html
@@ -4,7 +4,7 @@
 {% endblock %}
 {% block nav %}
     <li class="settings hidden-xs hidden-sm">
-                    <a href="{% url 'main:configuration' company_slug %}" role="button">
+                    <a href="{% url 'main:config' company_slug %}" role="button">
                         <i class="icon-cog"></i>
                     </a>
             </li>
