--- a/src/acuerdos_sst/templates/acuerdos_sst/agreement.html
+++ b/src/acuerdos_sst/templates/acuerdos_sst/agreement.html
@@ -1,4 +1,4 @@
-{% extends 'main/accidents/list.html' %}
+{% extends 'acuerdos_sst/list.html' %}
 {% load static %}
 {% block styles %}
     <link href="{% static 'main/css/bootstrap/bootstrap.css' %}" rel="stylesheet" />
@@ -26,7 +26,7 @@
     <div id="pad-wrapper" class="new-user">
         <div class="row header">
             <div class="col-md-12">
-                <h3>ACCIDENTES, INCIDENTES Y SALUD OCUPACIONAL</h3>
+                <h3>ACUERDOS</h3>
             </div>
         </div>
      {% if message %}
