--- a/src/acuerdos_sst/templates/acuerdos_sst/list.html
+++ b/src/acuerdos_sst/templates/acuerdos_sst/list.html
@@ -7,11 +7,11 @@
     <div id="pad-wrapper" class="users-list">
     <div class="table-wrapper products-table">
         <div class="row header">
-            <h3>ACCIDENTES, INCIDENTES Y SALUD OCUPACIONAL</h3>
+            <h3>ACUERDOS DE COMITE</h3>
             <div class="col-md-10 col-sm-12 col-xs-12 pull-right">
-                <a href="{% url 'main:accident_new' company.slug %}" class="btn-flat success pull-right">
+                <a href="{% url 'acuerdos_sst:agreement_new' company.slug %}" class="btn-flat success pull-right">
                     <span>&#43;</span>
-                    Nuevo Accidente
+                    Nuevo Acuerdo
                 </a>
             </div>
         </div>
@@ -23,24 +23,26 @@
         <table class="table table-hover">
             <thead>
             <tr>
-                <th>Título</th>
-                <th><span class="line"></span>Fecha</th>
-                <th><span class="line"></span>Tipo</th>
-                <th><span class="line"></span></th>
+                <th>Acuerdo</th>
+                <th><span class="line"></span>Fecha Acuerdo</th>
+                <th><span class="line"></span>Estado</th>
+                <th><span class="line"></span>Opciones</th>
                 <!--<th><span class="line"></span>Formato</th>-->
             </tr>
             </thead>
             <tbody>
-            {% for accident in accidents %}
+            {% for agreement in agreements %}
             <tr>
-                <td>{{accident.title}}</td>
-                <td>{{accident.date}}</td>
-                <td>{{accident.get_type_accident_display}}</td>
+                <td>{{agreement.title}}</td>
+                <td>{{agreement.content}}</td>
+                <td>{{agreement.date}}</td>
                 <td>
+
                     <ul class="actions">
-                        <li><a href="{% url 'main:accident_edit' company.slug accident.pk %}">Edit</a></li>
-                        <li class="last"><a href="{% url 'main:accident_delete' company.slug accident.pk %}">Delete</a></li>
+                        <li><a href="{% url 'acuerdos_sst:agreement_detail' company.slug agreement.pk %}">Edit</a></li>
+                        <li class="last"><a href="{% url 'acuerdos_sst:agreement_delete' company.slug agreement.pk %}">Delete</a></li>
                     </ul>
+
                 </td>
             </tr>
             {% endfor %}
