--- a/src/fullcalendar/templates/fullcalendar/calendar.html
+++ b/src/fullcalendar/templates/fullcalendar/calendar.html
@@ -44,6 +44,7 @@
             <div class="modal-body">
                 <form method="post" class="form-horizontal" action="{% url 'fullcalendar:save_event' slug %}" id="event-form">
                     {% for f in form %}
+                        {% csrf_token %}
                     <div class="form-group {% if f.errors %}has-error{% endif %}">
                         <label for="id_{{f.name}}" class="col-sm-2 control-label">{{ f.label|capfirst }}</label>
                         <div class="col-sm-10">
