--- a/src/main/templates/main/configuration.html
+++ b/src/main/templates/main/configuration.html
@@ -1,5 +1,5 @@
 {% extends 'main/layout.html' %}
 {% block content %}
-    configuration
+    <a href="{% url 'accounts:admin_workes' company_slug %}"></a>
 
 {% endblock %}
