--- a/src/main/templates/main/layout.html
+++ b/src/main/templates/main/layout.html
@@ -4,17 +4,17 @@
 {% endblock %}
 {% block nav %}
     <li class="settings hidden-xs hidden-sm">
-                    <a href="{% url 'main:config' company_slug %}" role="button">
-                        <i class="icon-cog"></i>
-                    </a>
-            </li>
+        <a href="{% url 'main:config' company_slug %}" role="button">
+            <i class="icon-cog"></i>
+        </a>
+    </li>
 {% endblock %}
 {% block sidebar %}
     <div id="sidebar-nav">
-         <ul id="dashboard-menu">
+        <ul id="dashboard-menu">
             <li>
                 <a href="{% url 'main:panel' company_slug %}"><i class="icon-home"></i>
-                    <span>{{company.short_name|upper}}</span>
+                    <span>{{ company.short_name|upper }}</span>
                 </a>
             </li>
             <li>
@@ -23,22 +23,46 @@
                     <span>Requisitos</span>
                 </a>
             </li>
-            <li >
+            <li>
+                <a href="{% url 'main:workers' company.slug %}">
+                    <i class="icon-group"></i>
+                    <span>Trabajadores</span>
+                </a>
+            </li>
+            <li>
                 <a href="{% url 'fullcalendar:list' company.slug %}">
                     <i class="icon-calendar-empty"></i>
                     <span>Calendarios</span>
                 </a>
             </li>
-            <li >
+            <li>
+                <a href="{% url 'main:indices' company.slug %}">
+                    <i class="icon-th-large"></i>
+                    <span>Indices</span>
+                </a>
+            </li>
+            <li>
+                <a href="{% url 'main:requirements_list' company.slug %}">
+                    <i class="icon-plus"></i>
+                    <span>Otros Indicadores</span>
+                </a>
+            </li>
+            <li>
                 <a href="{% url 'main:accident_list' company.slug %}">
                     <i class="icon-heart-empty"></i>
                     <span>Accidentes</span>
                 </a>
             </li>
             <li>
-                <a href="#">
+                <a href="{% url 'acuerdos_sst:agreement_list' company.slug %}">
                     <i class="icon-comments-alt"></i>
                     <span>Acuerdo SST</span>
+                </a>
+            </li>
+            <li>
+                <a href="{% url 'main:legal_requirement' company.slug %}">
+                    <i class="icon-edit"></i>
+                    <span>Requisitos Legales</span>
                 </a>
             </li>
             <li>
