--- a/src/main/templates/main/requirements/list.html
+++ b/src/main/templates/main/requirements/list.html
@@ -6,15 +6,16 @@
 
 <div id="pad-wrapper" class="users-list">
     <div class="row header">
-        <h3>Requerimientos</h3>
+        <h3>REQUERIMIENTOS</h3>
+        <div class="col-md-10 col-sm-12 col-xs-12 pull-right">
+                <a href="{% url 'main:requirement_new' company.slug %}" class="btn-flat success pull-right">
+                    <span>&#43;</span>
+                    Nuevo Requerimiento
+                </a>
+            </div>
     </div>
     <div id="pad-wrapper" class="users-list">
-     <div class="col-md-6 col-sm-12 col-xs-12 pull-right">
-        <a href="{% url 'main:requirement_new' company.slug%}" class="btn-flat success pull-right">
-            <span>&#43;</span>
-            Nuevo Requerimiento
-        </a>
-    </div>
+
     <table class="table table-hover">
         <thead>
         <tr>
