--- a/src/main/templates/main/workers/list.html
+++ b/src/main/templates/main/workers/list.html
@@ -7,11 +7,11 @@
     <div id="pad-wrapper" class="users-list">
     <div class="table-wrapper products-table">
         <div class="row header">
-            <h3>ACCIDENTES, INCIDENTES Y SALUD OCUPACIONAL</h3>
+            <h3>TRABAJADORES</h3>
             <div class="col-md-10 col-sm-12 col-xs-12 pull-right">
-                <a href="{% url 'main:accident_new' company.slug %}" class="btn-flat success pull-right">
+                <a href="{% url 'main:worker_new' company.slug %}" class="btn-flat success pull-right">
                     <span>&#43;</span>
-                    Nuevo Accidente
+                    Nuevo Trabajador
                 </a>
             </div>
         </div>
@@ -23,23 +23,23 @@
         <table class="table table-hover">
             <thead>
             <tr>
-                <th>Título</th>
-                <th><span class="line"></span>Fecha</th>
-                <th><span class="line"></span>Tipo</th>
-                <th><span class="line"></span></th>
+                <th>Codigo</th>
+                <th><span class="line"></span>Nombre</th>
+                <th><span class="line"></span>Cargo</th>
+                <th><span class="line"></span>Opciones</th>
                 <!--<th><span class="line"></span>Formato</th>-->
             </tr>
             </thead>
             <tbody>
-            {% for accident in accidents %}
+            {% for worker in workers_company %}
             <tr>
-                <td>{{accident.title}}</td>
-                <td>{{accident.date}}</td>
-                <td>{{accident.get_type_accident_display}}</td>
+                <td>{{worker.code}}</td>
+                <td>{{worker.name}}</td>
+                <td>{{worker.get_cargo_display}}</td>
                 <td>
                     <ul class="actions">
-                        <li><a href="{% url 'main:accident_edit' company.slug accident.pk %}">Edit</a></li>
-                        <li class="last"><a href="{% url 'main:accident_delete' company.slug accident.pk %}">Delete</a></li>
+                        <li><a href="{% url 'main:worker_edit' company.slug worker.pk %}">Edit</a></li>
+                        <li class="last"><a href="{% url 'main:worker_delete' company.slug worker.pk %}">Delete</a></li>
                     </ul>
                 </td>
             </tr>
