--- a/src/fullcalendar/templates/fullcalendar/list.html
+++ b/src/fullcalendar/templates/fullcalendar/list.html
@@ -9,18 +9,22 @@
     <div class="table-wrapper products-table">
         <div class="row header">
             <h3>Calendarios</h3>
+            {% if request.user.is_superuser %}
             <div class="col-md-10 col-sm-12 col-xs-12 pull-right">
                 <a href="{% url 'fullcalendar:new' company.slug %}" class="btn-flat success pull-right">
                     <span>&#43;</span>
                     Nuevo Calendario
                 </a>
             </div>
+            {% endif %}
         </div>
         <table class="table table-hover">
             <thead>
             <tr>
                 <th>Nombre</th>
-                <th></th>
+                {% if request.user.is_superuser %}
+                <th>Opciones</th>
+                {% endif %}
                 <!--<th><span class="line"></span>Formato</th>-->
             </tr>
             </thead>
@@ -29,6 +33,7 @@
             {% for calendar in calendars %}
             <tr>
                 <td><b>{{calendar.title}}</b></td>
+                {% if request.user.is_superuser %}
                 <td>
                     <ul class="actions">
                         <li><a href="{% url 'fullcalendar:view_calendar' company.slug calendar.slug calendar.pk %}">Ver</a></li>
@@ -36,6 +41,7 @@
                         <li class="last"><a href="#">Delete</a></li>
                     </ul>
                 </td>
+            {% endif %}
             </tr>
             {% endfor %}
 
