--- a/src/main/templates/main/accidents/accidents.html
+++ b/src/main/templates/main/accidents/accidents.html
@@ -1,26 +1,6 @@
-{% extends 'main/accidents/list.html' %}
+{% extends 'main/layout.html' %}
 {% load static %}
 {% block styles %}
-    <link href="{% static 'main/css/bootstrap/bootstrap.css' %}" rel="stylesheet" />
-    <link href="{% static 'main/css/bootstrap/bootstrap-overrides.css' %}" type="text/css" rel="stylesheet" />
-
-    <!-- global styles -->
-    <link rel="stylesheet" type="text/css" href="{% static 'main/css/compiled/layout.css' %}" />
-    <link rel="stylesheet" type="text/css" href="{% static 'main/css/compiled/elements.css' %}" />
-    <link rel="stylesheet" type="text/css" href="{% static 'main/css/compiled/icons.css' %}" />
-
-    <!-- libraries -->
-    <link rel="stylesheet" type="text/css" href="{% static 'main/css/lib/font-awesome.css' %}" />
-
-    <!-- this page specific styles -->
-    <link rel="stylesheet" href="{% static 'main/css/compiled/new-user.css' %}" type="text/css" media="screen" />
-        <link rel="stylesheet" href="{% static 'main/css/compiled/form-showcase.css' %}" type="text/css" media="screen" />
-        <link href="{% static 'main/css/lib/bootstrap.datepicker.css' %}" type="text/css" rel="stylesheet" />
-
-
-
-    <!-- open sans font -->
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css' />
 {%  endblock %}
 {% block content %}
     <div id="pad-wrapper" class="new-user">
@@ -57,29 +37,4 @@
 
 {% endblock %}
 {% block scripts %}
-     <script src="{% static 'main/js/wysihtml5-0.3.0.js' %}"></script>
-    <script src="http://code.jquery.com/jquery-latest.js"></script>
-    <script src="{% static 'main/js/bootstrap.min.js' %}"></script>
-    <script src="{% static 'main/js/bootstrap.datepicker.js' %}"></script>
-    <script src="{% static 'main/js/jquery.uniform.min.js' %}"></script>
-    <script src="{% static 'main/js/select2.min.js' %}"></script>
-    <script src="{% static 'main/js/theme.js' %}"></script>
-    <script type="text/javascript">
-        $(function () {
-
-            // add uniform plugin styles to html elements
-            $("input:checkbox, input:radio").uniform();
-
-            // select2 plugin for select elements
-            $(".select2").select2({
-                placeholder: "Select a State"
-            });
-
-            // datepicker plugin
-            $('.input-datepicker').datepicker().on('changeDate', function (ev) {
-                $(this).datepicker('hide');
-            });
-        });
-    </script>
-
 {% endblock %}
