--- a/src/main/templates/main/accidents/list.html
+++ b/src/main/templates/main/accidents/list.html
@@ -8,12 +8,14 @@
     <div class="table-wrapper products-table">
         <div class="row header">
             <h3>ACCIDENTES, INCIDENTES Y SALUD OCUPACIONAL</h3>
+            {% if request.user.is_superuser %}
             <div class="col-md-10 col-sm-12 col-xs-12 pull-right">
                 <a href="{% url 'main:accident_new' company.slug %}" class="btn-flat success pull-right">
                     <span>&#43;</span>
                     Nuevo Accidente
                 </a>
             </div>
+            {% endif %}
         </div>
         {% if message %}
             <div class="alert alert-danger alert-dismissible" role="alert">
@@ -26,7 +28,9 @@
                 <th>Título</th>
                 <th><span class="line"></span>Fecha</th>
                 <th><span class="line"></span>Tipo</th>
-                <th><span class="line"></span></th>
+                {% if request.user.is_superuser %}
+                <th><span class="line"></span>Opciones</th>
+                {% endif %}
                 <!--<th><span class="line"></span>Formato</th>-->
             </tr>
             </thead>
@@ -36,12 +40,14 @@
                 <td>{{accident.title}}</td>
                 <td>{{accident.date}}</td>
                 <td>{{accident.get_type_accident_display}}</td>
+                {% if request.user.is_superuser %}
                 <td>
                     <ul class="actions">
                         <li><a href="{% url 'main:accident_edit' company.slug accident.pk %}">Edit</a></li>
                         <li class="last"><a href="{% url 'main:accident_delete' company.slug accident.pk %}">Delete</a></li>
                     </ul>
                 </td>
+            {% endif %}
             </tr>
             {% endfor %}
             </tbody>
