--- a/src/main/templates/main/company/list.html
+++ b/src/main/templates/main/company/list.html
@@ -14,12 +14,14 @@
     <div class="table-wrapper products-table">
         <div class="row header">
             <div class="col-md-12"><h3>Empresas</h3></div>
+            {% if request.user.is_superuser %}
             <div class="col-md-6 col-sm-12 col-xs-12 pull-right">
                 <a href="{% url 'main:company_new' %}" class="btn-flat success pull-right">
                     <span>&#43;</span>
                     Nuevo Empresa
                 </a>
             </div>
+            {% endif %}
         </div>
         <table class="table table-hover">
             <thead>
@@ -27,16 +29,20 @@
                 <th>Nombre</th>
                 <th><span class="line"></span>RUC</th>
                 <th><span class="line"></span>Usuario</th>
-                <th></th>
+                {% if request.user.is_superuser %}
+                <th>Opciones</th>
+                {% endif %}
             </tr>
             </thead>
             <tbody>
 
             {% for company in companies %}
+
             <tr>
-                <td>{{company.name}}</td>
+                <td><a href="{% url 'main:panel' company.slug %}">{{company.name}}</a></td>
                 <td>{{company.ruc}}</td>
                 <td>{{company.user.get_full_name}} | {{company.user.email }}</td>
+                {% if request.user.is_superuser %}
                 <td>
                     <ul class="actions">
                         <li><a href="{% url 'main:panel' company.slug %}">Ver</a></li>
@@ -44,7 +50,9 @@
                         <li class="last"><a href="#">Eliminar</a></li>
                     </ul>
                 </td>
+            {% endif %}
             </tr>
+
             {% endfor %}
 
             </tbody>
