--- a/src/main/templates/main/home.html
+++ b/src/main/templates/main/home.html
@@ -18,6 +18,7 @@
         <br>
         <br>
         <br>
+        {% if request.user.is_superuser %}
         <div class="col-md-3"></div>
             <a href="{% url 'main:panel' company_jra_slug %}">
             <div class="col-md-2 circulo1" align="center" width="200" height="200">
@@ -27,6 +28,10 @@
                 <h2>OSHAS 18001:2007</h2>
             </div>
         </a>
+
+            {% else %}
+              <div class="col-md-3"></div>
+            {% endif %}
 
         <div class="col-md-2"></div>
 
