--- a/src/main/templates/main/layout.html
+++ b/src/main/templates/main/layout.html
@@ -1,13 +1,15 @@
 {% extends 'main/layout_with_out_nav.html' %}
+{% load layout_extras %}
 {% load static %}
 {% block styles %}
 {% endblock %}
 {% block nav %}
-    <li class="settings hidden-xs hidden-sm">
+    <!--<li class="settings hidden-xs hidden-sm">
         <a href="{% url 'main:config' company_slug %}" role="button">
             <i class="icon-cog"></i>
         </a>
-    </li>
+    </li>-->
+    
 {% endblock %}
 {% block sidebar %}
     <div id="sidebar-nav">
@@ -17,12 +19,14 @@
                     <span>{{ company.short_name|upper }}</span>
                 </a>
             </li>
+         {% if not request.user|has_group:"Doctor"  %}
             <li>
                 <a href="{% url 'main:requirements_list' company.slug %}">
                     <i class="icon-tasks"></i>
                     <span>Requisitos</span>
                 </a>
             </li>
+
             <li>
                 <a href="{% url 'main:workers' company.slug %}">
                     <i class="icon-group"></i>
@@ -41,15 +45,25 @@
                     <span>Indices</span>
                 </a>
             </li>
-            <li>
+            <!--<li>
                 <a href="{% url 'main:requirements_list' company.slug %}">
                     <i class="icon-plus"></i>
                     <span>Otros Indicadores</span>
                 </a>
-            </li>
+            </li>-->
+        {% endif %}
+           {% if request.user|has_group:"Doctor" and not request.user.is_superuser %}
+                <li>
+                    <a href="{% url 'main:medic_exam' company.slug %}">
+                        <i class="icon-heart"></i>
+                        <span>Control Medico</span>
+                    </a>
+                </li>
+            {% endif %}
+         {% if not request.user|has_group:"Doctor"  %}
             <li>
                 <a href="{% url 'main:accident_list' company.slug %}">
-                    <i class="icon-heart-empty"></i>
+                    <i class="icon-warning-sign"></i>
                     <span>Accidentes</span>
                 </a>
             </li>
@@ -71,6 +85,7 @@
                     <span>Reportes</span>
                 </a>
             </li>
+        {% endif %}
         </ul>
     </div>
 {% endblock %}
