--- a/src/main/templates/main/legal_requirement/list.html
+++ b/src/main/templates/main/legal_requirement/list.html
@@ -7,12 +7,14 @@
 <div id="pad-wrapper" class="users-list">
     <div class="row header">
         <h3>REQUISITOS LEGALES</h3>
+        {% if request.user.is_superuser %}
         <div class="col-md-10 col-sm-12 col-xs-12 pull-right">
                 <a href="{% url 'main:legal_requirement_new' company.slug %}" class="btn-flat success pull-right">
                     <span>&#43;</span>
                     Nuevo Requisito
                 </a>
             </div>
+    {% endif %}
     </div>
     <div id="pad-wrapper" class="users-list">
 
@@ -23,7 +25,9 @@
             <th>Fecha Publicacion</th>
             <th>Titulo Dispositivo</th>
             <th>Mes</th>
+            {% if request.user.is_superuser %}
             <th>Opciones</th>
+            {% endif %}
         </tr>
         </thead>
         <tbody>
@@ -34,12 +38,14 @@
             <td><b>{{requirement.datepublication}}</b></td>
             <td><b>{{requirement.title}}</b></td>
             <td><b>{{requirement.actual_month}}</b></td>
+            {% if request.user.is_superuser %}
             <td>
                 <ul class="actions">
                     <li><a href="{% url 'main:legal_requirement_edit' company.slug requirement.pk %}">Edit</a></li>
                     <li class="last"><a href="{% url 'main:legal_requirement_delete' company.slug requirement.pk %}">Delete</a></li>
                 </ul>
             </td>
+        {% endif %}
         </tr>
         {% endfor %}
 
