--- a/src/main/templates/main/panel.html
+++ b/src/main/templates/main/panel.html
@@ -10,10 +10,11 @@
 
     <div id="pad-wrapper" class="user-profile">
         <!-- header -->
-
+        {% if request.user.is_superuser %}
         <div class="pull-right">
             <a class="btn btn-default" href="{% url 'main:company_edit' company.slug %}">{% trans 'edit' %}</a>
         </div>
+        {% endif %}
         <div class="row header">
             <div class="col-md-12">
                 {% if company.logo %}
