--- a/src/main/templates/main/requirements/list.html
+++ b/src/main/templates/main/requirements/list.html
@@ -7,12 +7,14 @@
 <div id="pad-wrapper" class="users-list">
     <div class="row header">
         <h3>REQUERIMIENTOS</h3>
+        {% if request.user.is_superuser %}
         <div class="col-md-10 col-sm-12 col-xs-12 pull-right">
                 <a href="{% url 'main:requirement_new' company.slug %}" class="btn-flat success pull-right">
                     <span>&#43;</span>
                     Nuevo Requerimiento
                 </a>
             </div>
+    {% endif %}
     </div>
     <div id="pad-wrapper" class="users-list">
 
