--- a/src/main/templates/main/workers/list.html
+++ b/src/main/templates/main/workers/list.html
@@ -1,54 +1,61 @@
 {% extends 'main/layout.html' %}
 {% load static %}
 {% block styles %}
-    <link rel="stylesheet" type="text/css" href="{% static 'main/css/compiled/tables.css'%}"/>
+    <link rel="stylesheet" type="text/css" href="{% static 'main/css/compiled/tables.css' %}"/>
 {% endblock %}
 {% block content %}
     <div id="pad-wrapper" class="users-list">
-    <div class="table-wrapper products-table">
-        <div class="row header">
-            <h3>TRABAJADORES</h3>
-            <div class="col-md-10 col-sm-12 col-xs-12 pull-right">
-                <a href="{% url 'main:worker_new' company.slug %}" class="btn-flat success pull-right">
-                    <span>&#43;</span>
-                    Nuevo Trabajador
-                </a>
+        <div class="table-wrapper products-table">
+            <div class="row header">
+                <h3>TRABAJADORES</h3>
+                {% if request.user.is_superuser %}
+                    <div class="col-md-10 col-sm-12 col-xs-12 pull-right">
+                        <a href="{% url 'main:worker_new' company.slug %}" class="btn-flat success pull-right">
+                            <span>&#43;</span>
+                            Nuevo Trabajador
+                        </a>
+                    </div>
+                {% endif %}
             </div>
+            {% if message %}
+                <div class="alert alert-danger alert-dismissible" role="alert">
+                    <strong>Error!</strong> {{ message }} {{ response }}
+                </div>
+            {% endif %}
+            <table class="table table-hover">
+                <thead>
+                <tr>
+                    <th>Codigo</th>
+                    <th><span class="line"></span>Nombre</th>
+                    <th><span class="line"></span>Cargo</th>
+                    {% if request.user.is_superuser %}
+                    <th><span class="line"></span>Opciones</th>
+                {% endif %}
+                    <!--<th><span class="line"></span>Formato</th>-->
+                </tr>
+                </thead>
+                <tbody>
+                {% for worker in workers_company %}
+                    <tr>
+                        <td>{{ worker.code }}</td>
+                        <td>{{ worker.name }}</td>
+                        <td>{{ worker.get_cargo_display }}</td>
+                        {% if request.user.is_superuser %}
+                            <td>
+                                <ul class="actions">
+                                    <li><a href="{% url 'main:worker_edit' company.slug worker.pk %}">Edit</a></li>
+                                    <li class="last"><a href="{% url 'main:worker_delete' company.slug worker.pk %}">Delete</a>
+                                    </li>
+                                </ul>
+                            </td>
+                        {% endif %}
+                    </tr>
+                {% endfor %}
+                </tbody>
+            </table>
         </div>
-        {% if message %}
-            <div class="alert alert-danger alert-dismissible" role="alert">
-                <strong>Error!</strong> {{ message }} {{ response }}
-            </div>
-        {% endif %}
-        <table class="table table-hover">
-            <thead>
-            <tr>
-                <th>Codigo</th>
-                <th><span class="line"></span>Nombre</th>
-                <th><span class="line"></span>Cargo</th>
-                <th><span class="line"></span>Opciones</th>
-                <!--<th><span class="line"></span>Formato</th>-->
-            </tr>
-            </thead>
-            <tbody>
-            {% for worker in workers_company %}
-            <tr>
-                <td>{{worker.code}}</td>
-                <td>{{worker.name}}</td>
-                <td>{{worker.get_cargo_display}}</td>
-                <td>
-                    <ul class="actions">
-                        <li><a href="{% url 'main:worker_edit' company.slug worker.pk %}">Edit</a></li>
-                        <li class="last"><a href="{% url 'main:worker_delete' company.slug worker.pk %}">Delete</a></li>
-                    </ul>
-                </td>
-            </tr>
-            {% endfor %}
-            </tbody>
-        </table>
     </div>
-</div>
-{% endblock%}
+{% endblock %}
 
 {% block scripts %}
-{% endblock%}
+{% endblock %}
