--- a/src/fullcalendar/templates/fullcalendar/calendar.html
+++ b/src/fullcalendar/templates/fullcalendar/calendar.html
@@ -14,6 +14,8 @@
 <link href="{% static 'fullcalendar/fullcalendar/fullcalendar.css'%}" rel="stylesheet"/>
 <link href="https://fullcalendar.io/js/fullcalendar-3.1.0/fullcalendar.print.min.css" rel="stylesheet" media='print'/>
 <link href="{% static 'fullcalendar/fullcalendar/lib/cupertino/jquery-ui.min.css' %}" rel="stylesheet"/>
+    <link rel="stylesheet" href="{% static 'main/css/compiled/calendar.css' %}" type="text/css" media="screen" />
+
 
 
 {% endblock %}
@@ -70,10 +72,13 @@
 </div>
 {% endblock %}
 
-{% block scripts %}
+{% block more_scripts %}
+    <script src="http://code.jquery.com/jquery-latest.js"></script>
+     <script src="{% static 'main/js/jquery-ui-1.10.2.custom.min.js' %}"></script>
+      <script src="{% static 'main/js/bootstrap.min.js' %}"></script>
 <script src="https://fullcalendar.io/js/fullcalendar-3.1.0/lib/moment.min.js"></script>
-<script type="text/javascript"
-        src="{% static 'fullcalendar/plugins/bootstrap-datetimepicker/js/bootstrap-datetimepicker.min.js' %}"></script>
+     <script src="{% static 'fullcalendar/' %}js/theme.js"></script>
+<script type="text/javascript" src="{% static 'fullcalendar/plugins/bootstrap-datetimepicker/js/bootstrap-datetimepicker.min.js' %}"></script>
 <!--<script src="{% static 'main/js/fullcalendar.min.js' %}"></script>-->
 <script src="https://fullcalendar.io/js/fullcalendar-3.1.0/fullcalendar.min.js"></script>
 <script src="https://fullcalendar.io/js/fullcalendar-3.1.0/locale/es.js"></script>
